# RxEngine

./: .gitmodules  CMakeLists.txt  README.md
Assets/lua/: engine-data.lua  engine.lua
Assets/lua/util/: data.lua
Assets/shaders/: build.bat  lighting.glsl  rml.frag  rml.vert  shdr_imgui.frag  shdr_imgui.vert  staticmesh_opaque.frag  staticmesh_opaque.vert
Assets/ui/: demo.rml  industronaut.rcss  invader.rcss  test1.rml  window.rml
ImportGLTF/: Args.h  CMakeLists.txt  Main.cpp  RXAssetManager.h  gltf.cpp
RxAssets/: CMakeLists.txt  README.md
RxAssets/src/: AssetException.cpp  AssetException.h  Loader.cpp  Loader.h  RXAssets.h  SerialisationData.h  Vfs.cpp  Vfs.h  dds-ktx.h  miniz.c  stb_image.cpp  stb_image_write.h  tser.hpp
RxCore/: CMakeLists.txt
RxCore/src/: Events.cpp  Events.h  RXCore.h  Window.cpp  Window.hpp
RxCore/src/Jobs/: JobManager.cpp  JobManager.hpp
RxCore/src/Vulkan/: Allocation.cpp  Allocation.h  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Device.cpp  Device.h  FrameBuffer.h  Image.cpp  Image.hpp  IndexBuffer.hpp  Pipeline.h  Queue.cpp  Queue.hpp  Shader.h  ThreadResources.cpp  ThreadResources.h  VMA.cpp  VertexBuffer.cpp  VertexBuffer.h  VkBootstrap.cpp  Vulk.hpp  vk_mem_alloc.h
RxCore/src/optick/: optick.h  optick_core.cpp  optick_gpu.vulkan.cpp  optick_memory.h
RxECS/include/: RxECS.h
src/: Delegates.cpp  Delegates.hpp  EngineConfig.cpp  EngineConfig.h  EngineMain.cpp  EngineMain.hpp  EngineUI.cpp  FSM.cpp  FSM.h  FastNoiseLite.h  JobAdapter.h  LuaState.cpp  LuaState.h  Scene.cpp  Scene.h  Subsystem.h  Window.cpp  Window.hpp  ini.h
src/Example/: TestMesh.cpp  TestMesh.hpp
src/Geometry/: Camera.hpp
src/ImGui/: ImGuiPipelineLayout.cpp  ImGuiPipelineLayout.h  ImGuiRender.cpp  ImGuiRender.hpp
src/Input/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/Modules/: Mesh.cpp  Mesh.h  Module.h  Render.h  Transforms.h
src/Modules/CameraControl/: CameraControl.cpp  CameraControl.h
src/Modules/DynamicMesh/: DynamicMesh.cpp  DynamicMesh.h
src/Modules/Environment/: Environment.cpp  Environment.h
src/Modules/ImGui/: ImGuiRender.cpp  ImGuiRender.hpp
src/Modules/Lighting/: Lighting.cpp  Lighting.h
src/Modules/MainWindow/: Keyboard.cpp  Keyboard.h  MainWindow.cpp  MainWindow.h  Mouse.cpp  Mouse.h
src/Modules/Materials/: Materials.cpp  Materials.h
src/Modules/Mesh/: Mesh.cpp  Mesh.h
src/Modules/Prototypes/: Prototypes.cpp  Prototypes.h
src/Modules/RTSCamera/: RTSCamera.cpp  RTSCamera.h
src/Modules/Renderer/: Renderer.cpp  Renderer.hpp
src/Modules/RmlUI/: RmlRenderInterface.cpp  RmlRenderInterface.h  RmlSystemInterface.cpp  RmlSystemInterface.h  RmlUI.cpp  RmlUI.h  UiContext.cpp  UiContext.h
src/Modules/Scene/: SceneModule.cpp  SceneModule.h
src/Modules/SceneCamera/: SceneCamera.cpp  SceneCamera.h
src/Modules/StaticMesh/: StaticMesh.cpp  StaticMesh.h
src/Modules/Stats/: Stats.cpp  Stats.h
src/Modules/SwapChain/: SwapChain.cpp  SwapChain.h
src/Modules/Transforms/: Transforms.cpp  Transforms.h
src/Modules/WorldObject/: WorldObject.cpp  WorldObject.h
src/Rendering/: BatchData.h  Defines.h  EntityManager.cpp  EntityManager.h  ILightingManager.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.hpp  MeshBundle.cpp  MeshBundle.h  RenderCamera.cpp  RenderCamera.h  RenderData.h  RenderMesh.h  Renderer.cpp  Renderer.hpp
src/Subsystems/: BatchManager.cpp  BatchManager.h  IInputHandler.h  ISceneCamera.h  Input.cpp  Input.h  Lighting.cpp  Lighting.h  SceneCamera.cpp  SceneCamera.h  Stats.cpp  Stats.hpp  UiContext.cpp  UiContext.h
src/UI/: RmlFileInterface.cpp  RmlFileInterface.h  RmlRenderInterface.cpp  RmlRenderInterface.h  RmlSystemInterface.cpp  RmlSystemInterface.h
